test: gcode 생성 test

--- a/gcode_generator/gcode_generator.ipynb
+++ b/gcode_generator/gcode_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,61 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_dir = '/Users/crossrunway/Downloads/gt3.jpeg'\n",
-    "img = cv2.imread(img_dir)"
+    "img_dir = '/Users/crossrunway/Downloads/gt3.jpeg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "contours, _ = cv2.findContours(gray, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g_code = \"\"\n",
-    "for contour in contours:\n",
-    "    for point in contour:\n",
-    "        x, y = point[0]\n",
-    "        g_code += \"G01 X{} Y{}\\n\".format(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G01 X0 Y0\n",
-      "G01 X0 Y167\n",
-      "G01 X299 Y167\n",
-      "G01 X299 Y0\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(g_code)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +92,9 @@
     "bg = img.copy()\n",
     "bg = cv2.drawContours(bg, [contour], -1, (255,255,0), 2)\n",
     "bg = cv2.drawContours(bg, contour_dilate, -1, (0,0,255), 2)\n",
-    "cv2.imshow('img', cv2.resize(bg, (987,987)))\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
+    "# cv2.imshow('img', cv2.resize(bg, (987,987)))\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()\n",
     "\n",
     "bg = np.zeros((h,w,3), np.uint8)\n",
     "for i in range(len(inner)-1):\n",
@@ -153,14 +108,14 @@
     "    \n",
     "bg = cv2.drawContours(bg, [contour], -1, (255,255,0), 2)\n",
     "bg = cv2.drawContours(bg, contour_dilate, -1, (0,0,255), 2)\n",
-    "cv2.imshow('img', cv2.resize(bg, (987,987)))\n",
-    "cv2.waitKey()\n",
-    "cv2.destroyAllWindows()"
+    "# cv2.imshow('img', cv2.resize(bg, (987,987)))\n",
+    "# cv2.waitKey()\n",
+    "# cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,47 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make cuts\n",
-    "for cut in range(cuts):\n",
-    "    # Plunge into the material\n",
-    "    g_code += \"G1 F\" + plunge_speed + \"\\n\"\n",
-    "    current_depth -= depth_per_cut\n",
-    "    g_code += \"G1 Z\" + str(current_depth/1000.00) + \"\\n\"\n",
-    "\n",
-    "    # Cut the bigger contour\n",
-    "    g_code += \"G1 F\" + feed_speed + \"\\n\"\n",
-    "\n",
-    "    # Iterate through each point in the dilated contour\n",
-    "    for point in outter:\n",
-    "        x = point[0]/1000.00\n",
-    "        y = point[1]/1000.00\n",
-    "        g_code += \"X\" + str(x) + \"Y\" + str(y) + \"\\n\"\n",
-    "\n",
-    "      \n",
-    "    # Go back to the origin\n",
-    "    g_code += \"G1 X\" + str(dilate_origin[0]/1000.00) + \"Y\" + str(dilate_origin[1]/1000.00) + \"\\n\"\n",
-    "        \n",
-    "    # Iterate through each point in the contour\n",
-    "    for point in inner:\n",
-    "        x = point[0]/1000.00\n",
-    "        y = point[1]/1000.00\n",
-    "        g_code += \"X\" + str(x) + \"Y\" + str(y) + \"\\n\"\n",
-    "        \n",
-    "    # Go back to the origin\n",
-    "    g_code += \"G1 X\" + str(origin[0]/1000.00) + \"Y\" + str(origin[1]/1000.00) + \"\\n\"\n",
-    "g_code += \"G0Z.1\"\n",
-    "g_code += \"M5\\n\"\n",
-    "g_code += \"M02\\n\"\n",
-    "g_code += \"%\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -5496,6 +5411,39 @@
     }
    ],
    "source": [
+    "# Make cuts\n",
+    "for cut in range(cuts):\n",
+    "    # Plunge into the material\n",
+    "    g_code += \"G1 F\" + plunge_speed + \"\\n\"\n",
+    "    current_depth -= depth_per_cut\n",
+    "    g_code += \"G1 Z\" + str(current_depth/1000.00) + \"\\n\"\n",
+    "\n",
+    "    # Cut the bigger contour\n",
+    "    g_code += \"G1 F\" + feed_speed + \"\\n\"\n",
+    "\n",
+    "    # Iterate through each point in the dilated contour\n",
+    "    for point in outter:\n",
+    "        x = point[0]/1000.00\n",
+    "        y = point[1]/1000.00\n",
+    "        g_code += \"X\" + str(x) + \"Y\" + str(y) + \"\\n\"\n",
+    "\n",
+    "      \n",
+    "    # Go back to the origin\n",
+    "    g_code += \"G1 X\" + str(dilate_origin[0]/1000.00) + \"Y\" + str(dilate_origin[1]/1000.00) + \"\\n\"\n",
+    "        \n",
+    "    # Iterate through each point in the contour\n",
+    "    for point in inner:\n",
+    "        x = point[0]/1000.00\n",
+    "        y = point[1]/1000.00\n",
+    "        g_code += \"X\" + str(x) + \"Y\" + str(y) + \"\\n\"\n",
+    "        \n",
+    "    # Go back to the origin\n",
+    "    g_code += \"G1 X\" + str(origin[0]/1000.00) + \"Y\" + str(origin[1]/1000.00) + \"\\n\"\n",
+    "g_code += \"G0Z.1\"\n",
+    "g_code += \"M5\\n\"\n",
+    "g_code += \"M02\\n\"\n",
+    "g_code += \"%\"\n",
+    "\n",
     "print(g_code)"
    ]
   }
