--- a/gcode_generator/gcode_generator.ipynb
+++ b/gcode_generator/gcode_generator.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_dir = '/Users/crossrunway/vsCODE/RobotProject/backend/uploads/911gt3rs.png'"
+    "img_dir = '/Users/crossrunway/xsCODE/RobotProject/backend/uploads/gt3.jpeg'"
    ]
   },
   {
@@ -616,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
